fixed text-align avatar rays loading issue and also have cache control working for browsers

--- a/app/assets/stylesheets/avatar.css
+++ b/app/assets/stylesheets/avatar.css
@@ -49,6 +49,7 @@
   background-color: transparent;
   width: inherit;
   height: inherit;
+  left: 0;
   border: 4px solid #EDEDED;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -67,6 +68,7 @@
   background-color: transparent;
   width: inherit;
   height: inherit;
+  left: 0;
   border: 4px solid white;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
